retrieved/unpackaged/unpackaged/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Departments__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <defaultValue>TODAY() + 3 + ( 
IF(
  WEEKDAY(Today()+ 3)=1, 
  1,
  0
   )
)</defaultValue>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weighate__c</fullName>
        <formula>Department__r.ATC_Count__c /  Department__r.Employee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Designation__c</columns>
        <columns>Weighate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Name_should_contain_alphabets</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(Name,&quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorMessage>Name should contain only Alphabets.</errorMessage>
    </validationRules>
</CustomObject>